--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,10 +17,10 @@ archives:
   - format: binary
 dockers:
   - image_templates:
-      - "gresearch/tfe-plan-bot:{{ .Tag }}"
-      - "gresearch/tfe-plan-bot:v{{ .Major }}"
-      - "gresearch/tfe-plan-bot:v{{ .Major }}.{{ .Minor }}"
-      - "gresearch/tfe-plan-bot:latest"
+      - "ljubon/tfe-plan-bot:{{ .Tag }}"
+      - "ljubon/tfe-plan-bot:v{{ .Major }}"
+      - "ljubon/tfe-plan-bot:v{{ .Major }}.{{ .Minor }}"
+      - "ljubon/tfe-plan-bot:latest"
     extra_files:
       - config/tfe-plan-bot.example.yml
       - tmp.tar
