--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Run build
+        run: goreleaser build --clean  
+
       - name: Run tests
         run: go test ./...
 
@@ -76,3 +79,9 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: ncipollo/release-action@v1
+        with:
+          name: ${{ github.ref_name }}
+          bodyFile: dist/CHANGELOG.md
+          artifacts: "dist/**"
