--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,17 +23,19 @@ jobs:
     steps:
       - name: Check out source code
         uses: actions/checkout@v4
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
 
-  test:
-    name: Test
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -44,16 +46,19 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: Run build
-        run: goreleaser build --clean  
+      - name: Run goreleaser
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          version: v1.25.1
+          args: build --clean
 
       - name: Run tests
-        run: go test ./...
+        run: go test -v ./...
 
   release:
     runs-on: ubuntu-latest
     environment: release
-    needs: [test,lint]
+    needs: [lint,build]
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout code
