--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ on:
     types:
       - opened
 
+permissions:
+  contents: write
+
 env:
   GO_VERSION: 1.22
 
@@ -23,17 +26,19 @@ jobs:
     steps:
       - name: Check out source code
         uses: actions/checkout@v4
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
 
-  test:
-    name: Test
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -44,16 +49,27 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Run build
-        run: goreleaser build --clean  
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          version: v1.25.1
+          args: build --clean
 
       - name: Run tests
-        run: go test ./...
+        run: go test -v ./...
 
   release:
     runs-on: ubuntu-latest
     environment: release
-    needs: [test,lint]
+    needs: [lint,build]
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout code
@@ -65,6 +81,14 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
