--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,3 +52,8 @@ jobs:
         run: goreleaser build --clean --snapshot
       - name: Run tests
         run: go test -v ./...
+
+  release:
+    needs: [build, lint]
+    uses: ./.github/workflows/release.yml
+    if: startsWith(github.ref, 'refs/tags/v')
